--- a/css/sky_osgeo.css
+++ b/css/sky_osgeo.css
@@ -50,14 +50,15 @@
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
+
 body {
   background: #ffffff;
-  background: -moz-radial-gradient(center, circle cover, #ffffff 0%, #9fcf67 100%);
-  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #9fcf67), color-stop(100%, #ffffff));
-  background: -webkit-radial-gradient(center, circle cover, #ffffff 0%, #9fcf67 100%);
-  background: -o-radial-gradient(center, circle cover, #ffffff 0%, #9fcf67 100%);
-  background: -ms-radial-gradient(center, circle cover, #ffffff 0%, #9fcf67 100%);
-  background: radial-gradient(center, circle cover, #ffffff 0%, #9fcf67 100%);
+  background: -moz-radial-gradient(center, circle cover, #F0F0F0 0%, #C7D0DC 100%);
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #C7D0DC), color-stop(100%, #F0F0F0));
+  background: -webkit-radial-gradient(center, circle cover, #F0F0F0 0%, #C7D0DC 100%);
+  background: -o-radial-gradient(center, circle cover, #F0F0F0 0%, #C7D0DC 100%);
+  background: -ms-radial-gradient(center, circle cover, #F0F0F0 0%, #C7D0DC 100%);
+  background: radial-gradient(center, circle cover, #F0F0F0 0%, #C7D0DC 100%);
   background-color: white; }
 
 .reveal {
@@ -222,6 +223,7 @@ body {
 
 .reveal strong, .reveal b {
   font-weight: 700;
+  color: #3b759e;
 }
 .reveal em, .reveal i {
   font-style: italic;
